# AssemblyMCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  README_EN.md  main.py  pyproject.toml
.github/workflows/: auto-version.yml  build-docker.yml  ci.yml  deploy.yml  release.yml  sync-specs.yaml
assemblymcp/: __init__.py  client.py  config.py  initialization.py  middleware.py  models.py  resources.py  schemas.py  server.py  services.py  settings.py  smart.py  spec_parser.py  ux.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  HANDOVER_GUIDE.md  PROJECT_STATUS.md  RELEASE.md  SPEC_PARSER.md  UX_REDESIGN_PLAN.md  api_analysis.md
scripts/: analyze_api_params.py  analyze_api_specs.py  categorize_apis.py  download_specs.py  sync_specs.py  test_mcp_integration.py  test_member_report.py  test_performance_tool.py  test_qa_fixes.py  test_sse_endpoint.py  test_sse_startup.py  test_streamable_http.py  test_topic_consensus_tool.py
specs/: all_apis.json  all_apis_p1.json  all_apis_p2.json  all_apis_p3.json  openapi_list.yaml
specs/by_category/: 보고서_발간물.json  의정활동별_공개.json  주제별_공개.json
specs/excel/: O01TEW000977U011862.xlsx  O04X68000884BE13083.xlsx  O0IS020011724J12768.xlsx  O0KGG20011857W15853.xlsx  O0MH4O001149BH11948.xlsx  O0TLLI0008796R14875.xlsx  O0UBVR000906UG11689.xlsx  O13FRZ001177X318752.xlsx  O1K5F2001204LJ11992.xlsx  O1O34T000932VG10613.xlsx  O1OS9V000880XH10851.xlsx  O27DU0000960M511942.xlsx  O2PLAU000882CD18776.xlsx  O2Q4ZT001004PV11014.xlsx  O2QQLK001176HI14481.xlsx  O2U9RG001168QQ15766.xlsx  O32948001073L213726.xlsx  O3VTTM0010223D15681.xlsx  O3VXPE000987AB14703.xlsx  O3YBRH0011715419177.xlsx  O4BV430009830710440.xlsx  O4K6HM0012064I15889.xlsx  (+254 more)
src/: cli.py
tests/: test_bill_service.py  test_client.py  test_committee_service.py  test_committee_service_enhancement.py  test_committee_service_fixes.py  test_enhanced_services.py  test_fixes.py  test_meeting_service.py  test_meeting_service_fixes.py  test_member_service.py  test_middleware.py  test_qa_reinforcement.py  test_server_comprehensive.py  test_server_discovery.py  test_server_tools.py  test_server_ux_workflows.py  test_smart_service_new.py  test_spec_parser.py  test_spec_parser_stream.py  test_spec_sync.py  test_unit_cd_formatting.py  test_ux_helpers.py  test_version_metadata.py  test_voting_service.py
(+280 files in other folders)
